--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="assets\reset.css" type="text/css">
+<link rel="stylesheet" href="assets\styles.css" type="text/css">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <head>
     <meta charset="utf-8">
     <title>Product Landing Page</title>
   </head>
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <head>
+      <nav>
+        <div class="header-img">
+          <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="image of the header">
+        </div>
+        <div class="nav-itens">
+          <ul>
+            <li><a href="_blank">Features</a></li>
+            <li><a href="_blank">How It Works</a></li>
+            <li><a href="_blank">Pricing</a></li>
+          </ul>
+
+        </div>
+      </nav>
+  </head>
+
+
 
   </body>
-
 </html>
