--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
             <li><a href="_blank">How It Works</a></li>
             <li><a href="_blank">Pricing</a></li>
           </ul>
-
         </div>
       </nav>
+
+      <!-- Header -->
+      <header>
+        <h1>Handcrafted, home-made masterpieces</h1>
+        <label for="email">
+          <input type="email" name="" value="">
+        </label>
+        <div class="button-submit">
+          <button type="button" name="submit-email">Get Started</button>
+        </div>
+      </header>
   </head>
 
 
