--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="assets\reset.css" type="text/css">
 <link rel="stylesheet" href="assets\styles.css" type="text/css">
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/187d11cae1.js" crossorigin="anonymous"></script>
+
   <head>
     <meta charset="utf-8">
     <title>Product Landing Page</title>
@@ -35,6 +37,29 @@
       </header>
   </head>
 
+    <!-- Main -->
+    <section>
+      <div class="main">
+        <i class="fas fa-fire"></i>
+        <div>
+          <h2>Premium Materials</h2>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+        </div>
+        <div>
+          <i class="fas fa-truck"></i>
+          <h2>Fast Shipping</h2>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+        </div>
+        <div>
+          <i class="fas fa-battery-full"></i>
+          <h2>Quality Assurance</h2>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
+      </div>
+      <div class="">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </section>
 
 
   </body>
