--- a/index.html
+++ b/index.html
@@ -60,7 +60,51 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
+    <section>
+      <div class="box">
+        <h4>TENOR TROMBONE</h4>
+        <h3>$600</h3>
+        <p>Lorem ipsum.</p>
+        <p>Lorem ipsum.</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum.</p>
+        <button type="button" name="select">Select</button>
+      </div>
+      <div class="box">
+        <h4>BASS TROMBONE</h4>
+        <h3>$900</h3>
+        <p>Lorem ipsum.</p>
+        <p>Lorem ipsum.</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum.</p>
+        <button type="button" name="select">Select</button>
+      </div>
+      <div class="box">
+        <h4>VALVE TROMBONE</h4>
+        <h3>$1200</h3>
+        <p>Plays similar to a Trumpet</p>
+        <p>Great for Jazz Bands</p>
+        <p>Lorem ipsum dolor.</p>
+        <p>Lorem ipsum.</p>
+        <button type="button" name="select">Select</button>
+      </div>
+    </section>
 
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li>
+          <a href="#">Contract</a>
+        </li>
+      </ul>
+      <p>Copyright 2016, Original Trombones</p>
+    </footer>
 
   </body>
 </html>
