--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <header>
         <h1>Handcrafted, home-made masterpieces</h1>
         <label for="email">
-          <input type="email" name="" value="">
+          <input type="email" name="" value="" placeholder="Enter your email adress">
         </label>
         <div class="button-submit">
           <button type="button" name="submit-email">Get Started</button>
@@ -40,8 +40,8 @@
     <!-- Main -->
     <section>
       <div class="main">
-        <i class="fas fa-fire"></i>
         <div>
+          <i class="fas fa-fire"></i>
           <h2>Premium Materials</h2>
           <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
         </div>
