added styles to the main elements of index.

--- a/index.html
+++ b/index.html
@@ -41,25 +41,37 @@
     <section>
       <div class="main">
         <div>
-          <i class="fas fa-fire"></i>
-          <h2>Premium Materials</h2>
-          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+          <div class="icon">
+            <i class="fas fa-fire"></i>
+          </div>
+          <div class="text">
+            <h2>Premium Materials</h2>
+            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+          </div>
         </div>
         <div>
-          <i class="fas fa-truck"></i>
-          <h2>Fast Shipping</h2>
-          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+          <div class="icon">
+            <i class="fas fa-truck"></i>
+          </div>
+          <div class="text">
+            <h2>Fast Shipping</h2>
+            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+          </div>
         </div>
         <div>
-          <i class="fas fa-battery-full"></i>
-          <h2>Quality Assurance</h2>
-          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+          <div class="icon">
+            <i class="fas fa-battery-full"></i>
+          </div>
+          <div class="text">
+            <h2>Quality Assurance</h2>
+            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+          </div>
         </div>
-      </div>
-      <div class="">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <section>
       <div class="box">
         <h4>TENOR TROMBONE</h4>
