--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <section>
+    <section class="sec-box">
       <div class="box">
         <h4>TENOR TROMBONE</h4>
         <h3>$600</h3>
