finished styling the page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <a href="#">Contract</a>
         </li>
       </ul>
-      <p>Copyright 2016, Original Trombones</p>
+      <span><p>Copyright 2016, Original Trombones</p></span>
     </footer>
 
   </body>
