--- a/index.html
+++ b/index.html
@@ -11,35 +11,32 @@
   </head>
   <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  <head>
-      <nav>
+  <header id="header">
+      <nav id="nav-bar">
         <div class="header-img">
-          <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="image of the header">
+          <img id= "header-img" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="image of the header">
         </div>
         <div class="nav-itens">
           <ul>
-            <li><a href="_blank">Features</a></li>
-            <li><a href="_blank">How It Works</a></li>
-            <li><a href="_blank">Pricing</a></li>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="##how-it-works">How It Works</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
           </ul>
         </div>
       </nav>
-
-      <!-- Header -->
-      <header>
+    </header>
+      <!-- First lines -->
+      <section>
         <h1>Handcrafted, home-made masterpieces</h1>
-        <label for="email">
-          <input type="email" name="" value="" placeholder="Enter your email adress">
-        </label>
-        <div class="button-submit">
-          <button type="button" name="submit-email">Get Started</button>
-        </div>
-      </header>
-  </head>
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <input id="email" type="email" name="email" value="" placeholder="Enter your email adress">
+          <input id="submit" type="submit" name="submit-email" text="Get Started">
+        </form>
+      </section>
 
     <!-- Main -->
     <section>
-      <div class="main">
+      <div id="features" class="main">
         <div>
           <div class="icon">
             <i class="fas fa-fire"></i>
@@ -69,10 +66,10 @@
         </div>
       </div>
     </section>
-    <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id="#how-it-works">
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <section class="sec-box">
+    <section id="pricing" class="pricing">
       <div class="box">
         <h4>TENOR TROMBONE</h4>
         <h3>$600</h3>
